@@ -125,7 +125,7 @@ software
 (version 1.6.5 or newer).
 @item @uref{http://www.python.org,Python} (version 2.1 or newer).
 @item @uref{http://www.ghostscript.com,Ghostscript} (version 8.15 or
-newer)
+newer. 8.50 recommended)
 @end itemize
 
 @subsection Building documentation
@@ -147,9 +147,10 @@ Building the website requires some additional tools and packages
 @item ImageMagick
 @item International fonts (see input/regression/utf-8.ly for hints
 about which font packages are necessary for your platform)
-@item Ghostscript, 8.15 with the patch from
+@item Ghostscript, 8.50 with the patch from
 @uref{http://bugs.ghostscript.com/show_bug.cgi?id=688154}
-
+and the patch from
+@uref{http://bugs.ghostscript.com/show_bug.cgi?id=688017}.
 @end itemize
 
 The HTML files can be installed into the standard documentation path
