@@ -75,11 +75,6 @@ LoadTableFromFile("LILY", "feta%(design_size)d.otf-gtable");
 
 Generate("%(filename)s-%(design_size)d.otf");
 Generate("%(filename)s-%(design_size)d.svg");
-SetFontNames("PFA%(name)s-%(design_size)d", "PFA%(name)s", "PFA%(name)s %(design_size)d", "%(design_size)d", notice, "@TOPLEVEL_VERSION@");
-
-# different name to prevent conflict with OTF
-#LoadEncodingFile("feta%(design_size)d.enc");
-Generate("PFA%(filename)s-%(design_size)d.pfa");
 ''' % vars()
 
 	basename = '%s-%d' % (filename, design_size)
